--- a/perfil.html
+++ b/perfil.html
@@ -34,14 +34,16 @@
         </div>
         <div class="caixa_informacoes_perfil">
             <div>
-                <p>Informações Pessoais</p>
+                <h2>Informações Pessoais</h2>
                 <p>Mantenha seus dados sempre atualizados</p>
             </div>
+            <br>
             <div>
                 <button id="btnEditarNome" readonly>
-                    <img src="img/logo lapis.png" alt="icone" class="iconeedita"> Editar Perfil
+                    <img src="img/logo lapis.png" alt="icone" class="iconeedita" height="30"> Editar Perfil
                 </button>
             </div>
+            <br>
             <div class="linha1">
                 <label for="nomeperfil">Nome Completo</label>
                 <input type="text" id="seuNome" class="nomeperfil">
@@ -60,9 +62,11 @@
             </div>
         </div>
         <div>
-            <button>
-                <img src="img/logo escudo.png" alt="icone"> Segurança
-            </button>
+            <br>
+            <button id="btnEditarNome">
+                <img src="img/logo escudo.png" alt="icone" height="30"> Segurança
+            </button><br>
+            <br>
             <p>Configure suas preferências de segurança</p>
             <p>Autenticação de dois fatores</p>
             <p>Adicione uma camada extra de segurança</p>
@@ -71,9 +75,10 @@
             <button>Dispositivos Conectados</button>
             <button>Historico de Login</button>
         </div>
+        <br>
         <div>
-            <button>
-                <img src="img/logo notificacao.png" alt="icone"> Notificaçãoes
+            <button id="btnEditarNome">
+                <img src="img/logo notificacao.png" alt="icone" height="30"> Notificaçãoes
             </button>
             <p>Escolha como deseja receber atualizações</p>
 
