--- a/equipe.html
+++ b/equipe.html
@@ -37,15 +37,15 @@
                     <span>CSS</span>
                 </div>
                 <div class="botoesgit">
-                    <button class="gmail">
+                    <a href="mailto:carlos.pjesus2020@gmail.com?subject=Solicitação%20de%20Entrevista%20-%20[%20Nome%20da%20Empresar]&body=Prezado%20[Carlos%20Eduardo%De%20Jesus],%0A%0AGostaria%20de%20expressar%20meu%20interesse%20em%20uma%20oportunidade%20de%20entrevista.%20Agradeceria%20se%20pudesse%20confirmar%20seus%20dados%20para%20contato%20e%20sugerir%20uma%20data%20e%20horário%20convenientes.%0A%0AAtenciosamente,%0A%0A[Nome%20do%20Interessado]" class="gmail">
                         <img src="img/gmail1.png" alt="icone" class="icone">
-                    </button>
-                    <button class="likidin">
+                    </a>
+                    <a href="https://www.linkedin.com/in/carllos-undefined-344825386/" class="likidin">
                         <img src="img/linkedin1.png" alt="icone" class="icone2">
-                    </button>
-                    <button class="github">
+                    </a>
+                    <a href="https://github.com/CarlosEdu0808" class="github">
                         <img src="img/github1.png" alt="icone" class="icone3">
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="vinicius">
@@ -61,15 +61,15 @@
                     <span>CSS</span>
                 </div>
                 <div class="botoesgit">
-                    <button class="gmail">
+                    <a href="mailto:vini976964150@gmail.com?subject=Solicitação%20de%20Entrevista%20-%20[%20Nome%20da%20Empresar]&body=Prezado%20[Vinicius%20Santos%20Camelo],%0A%0AGostaria%20de%20expressar%20meu%20interesse%20em%20uma%20oportunidade%20de%20entrevista.%20Agradeceria%20se%20pudesse%20confirmar%20seus%20dados%20para%20contato%20e%20sugerir%20uma%20data%20e%20horário%20convenientes.%0A%0AAtenciosamente,%0A%0A[Nome%20do%20Interessado]" class="gmail">
                         <img src="img/gmail1.png" alt="icone" class="icone">
-                    </button>
-                    <button class="likidin">
+                    </a>
+                    <a href="https://www.linkedin.com/in/vin%C3%ADcius-santos-490922244/" class="likidin">
                         <img src="img/linkedin1.png" alt="icone" class="icone2">
-                    </button>
-                    <button class="github">
+                    </a>
+                    <a href="https://github.com/ViniSantosC" class="github">
                         <img src="img/github1.png" alt="icone" class="icone3">
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="guilherme">
@@ -84,15 +84,15 @@
                     <span>CSS</span>
                 </div>
                 <div class="botoesgit">
-                    <button class="gmail">
+                    <a href="mailto:guitzn9@gmail.com?subject=Solicitação%20de%20Entrevista%20-%20[%20Nome%20da%20Empresar]&body=Prezado%20[Guilherme%20Bueno%20de%20Andrade],%0A%0AGostaria%20de%20expressar%20meu%20interesse%20em%20uma%20oportunidade%20de%20entrevista.%20Agradeceria%20se%20pudesse%20confirmar%20seus%20dados%20para%20contato%20e%20sugerir%20uma%20data%20e%20horário%20convenientes.%0A%0AAtenciosamente,%0A%0A[Nome%20do%20Interessado]" class="gmail">
                         <img src="img/gmail1.png" alt="icone" class="icone">
-                    </button>
-                    <button class="likidin">
+                    </a>
+                    <a href="https://www.linkedin.com/in/guilherme-bueno-38a821386/" class="likidin">
                         <img src="img/linkedin1.png" alt="icone" class="icone2">
-                    </button>
-                    <button class="github">
+                    </a>
+                    <a href="https://github.com/GuilhermeBuenoDA" class="github">
                         <img src="img/github1.png" alt="icone" class="icone3">
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="ryan">
@@ -107,15 +107,15 @@
                     <span>CSS</span>
                 </div>
                 <div class="botoesgit">
-                    <button class="gmail">
+                    <a href="mailto:ryan.28.ms@gmail.com?subject=Solicitação%20de%20Entrevista%20-%20[%20Nome%20da%20Empresar]&body=Prezado%20[Ryan%20Matos%20da%20Silva],%0A%0AGostaria%20de%20expressar%20meu%20interesse%20em%20uma%20oportunidade%20de%20entrevista.%20Agradeceria%20se%20pudesse%20confirmar%20seus%20dados%20para%20contato%20e%20sugerir%20uma%20data%20e%20horário%20convenientes.%0A%0AAtenciosamente,%0A%0A[Nome%20do%20Interessado]" class="gmail">
                         <img src="img/gmail1.png" alt="icone" class="icone">
-                    </button>
+                    </a>
                     <button class="likidin">
                         <img src="img/linkedin1.png" alt="icone" class="icone2">
                     </button>
-                    <button class="github">
+                    <a href="https://github.com/RyanM28S" class="github">
                         <img src="img/github1.png" alt="icone" class="icone3">
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
