--- a/DashBoard.html
+++ b/DashBoard.html
@@ -31,28 +31,74 @@
                 <p>R$ 20.000</p>
                 <p>+2.1% este mes</p>
             </div>
-            <div class="caixas">
+            <div class="caixas2">
                 <h2>Rentabilidade</h2>
                 <p>+12.5%</p>
                 <p>Ultimos 12 meses</p>
             </div>
-            <div class="caixas">
+            <div class="caixas3">
                 <h2>Meta mensal</h2>
                 <p>78%</p>
                 <p>------------</p>
             </div>
         </div>
+
         <div class="foco">
             <h3>Meus investimentos</h3>
-            <p class="borda">Tesouro direto</p>
-            <p class="borda">CDB</p>
-            <p class="borda">Nubank</p>
-            <p class="borda">Itau</p>
-            <p class="borda">Nintendo</p>
+            <section class="borda">
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="hider">hider</option>
+                        <option value="philco">philco</option>
+                        <option value="doritus">doritus</option>
+                        <option value="lacoste">lacoste</option>
+                    </select>
+                </form>
+            </section>
+            <section class="borda">
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="hider">hider</option>
+                        <option value="philco">philco</option>
+                        <option value="doritus">doritus</option>
+                        <option value="lacoste">lacoste</option>
+                    </select>
+                </form>
+            </section>
+            <section class="borda">
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="hider">hider</option>
+                        <option value="philco">philco</option>
+                        <option value="doritus">doritus</option>
+                        <option value="lacoste">lacoste</option>
+                    </select>
+                </form>
+            </section>
+            <section class="borda">
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="hider">hider</option>
+                        <option value="philco">philco</option>
+                        <option value="doritus">doritus</option>
+                        <option value="lacoste">lacoste</option>
+                    </select>
+                </form>
+            </section>
+            <section class="borda">
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="hider">hider</option>
+                        <option value="philco">philco</option>
+                        <option value="doritus">doritus</option>
+                        <option value="lacoste">lacoste</option>
+                    </select>
+                </form>
+            </section>
         </div>
     </main>
     <footer></footer>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
