--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -29,8 +29,8 @@
                 <p class="texto1"> Esqueci Minha Senha</p>
                 <p class="texto2">Digite seu e-mail para receber instruções de recuperação</p>
                 <p class="texto3">E-mail cadastrado</p>
-                <input type="email" class="inputemail">
-                <button class="butaoinsano">Enviar instruções</button>
+                <input id="emailEsqueci" type="email" class="inputemail">
+                <button onclick="enviarIns()" class="butaoinsano">Enviar instruções</button>
                 <p class="chapou">Lembrou da senha?</p><a href="Login.html" class="ai">Voltar ao login</a>
             </div>
         </div>
