--- a/Suporte.html
+++ b/Suporte.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suporte</title>
@@ -11,6 +14,7 @@
 <body>
     <header>
         <div class="head">
+            
             <img class="header" src="img/logo.png" alt="Logo da empresa">
             <h1>TechInvestiment</h1>
             <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
@@ -90,45 +94,45 @@
                     <strong><p>Investimentos</p></strong>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Qual o valor mínimo para começar a investir?</p></strong>
+                    <p>Qual o valor mínimo para começar a investir?</p>
                     <p class="texto2sp">Você pode começar com apenas R$ 100. Temos opções de investimento para todos os perfis e orçamentos.</p>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Como funciona a diversificação?</p></strong>
+                   <p>Como funciona a diversificação?</p>
                     <p class="texto2sp">A diversificação é distribuir seus investimentos em diferentes tipos de ativos para reduzir riscos. Nossa plataforma te ajuda a criar um portfólio equilibrado.</p>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Quando posso resgatar meus investimentos?</p></strong>
+                    <p>Quando posso resgatar meus investimentos?</p>
                     <p class="texto2sp">Depende do tipo de investimento. Alguns são diários (como fundos DI), outros têm prazos específicos (como CDBs). Todas as informações estão disponíveis antes de investir.</p>
                 </div>
                 <hr class="linhadivisoria">
                 <div class="contasuporte">
                     <img src="img/logopagamentossuporte.png" alt="logopagamento">
-                    <strong><p>Pagamentos</p></strong>
+                    <p>Pagamentos</p>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Quais formas de pagamento são aceitas?</p></strong>
+                    <p>Quais formas de pagamento são aceitas?</p>
                     <p class="texto2sp">Aceitamos TED, DOC, PIX e transferência bancária. O PIX é processado instantaneamente.</p>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Há alguma taxa para aportes?</p></strong>
+                    <p>Há alguma taxa para aportes?</p>
                     <p class="texto2sp">Não cobramos taxas para aportes via PIX ou TED. Algumas operações específicas podem ter custos que são informados previamente.</p>
                 </div>
                 <div class="divcontasuporte">
-                    <strong><p>Como funciona o resgate?</p></strong>
+                    <p>Como funciona o resgate?</p>
                     <p class="texto2sp">Os resgates são processados em até 2 dias úteis e o valor é creditado na sua conta bancária cadastrada.</p>
                 </div>
             </div>
         
 
             <div class="contatodiretodiv">
-                <div>
-                    <img src="" alt="">
+                <div class="contatodireto">
+                    <img src="img/logocontatodireto.png" alt="logocontato">
                     <p>Contato Direto</p>
                 </div>
-                <div>
-                    <p>Não encontrou o que procurava? Envie sua dúvida</p>
-                    <p>Nome</p>
+                <div class="divcontatodireto">
+                    <p class="mensagemcontatodiv">Não encontrou o que procurava? Envie sua dúvida</p>
+                    <p class="nomecontatodireto">Nome</p>
                     <input type="text" name="" id="">
                     <p>E-mail</p>
                     <input type="email">
@@ -140,24 +144,24 @@
                     <input type="text" placeholder="Descreva sua duvida ou problema...">
                     <button>Enviar Mensagem</button>
                 </div>
+            </div>
                 <div class="statusmensagemdiv">
-                    <div>
-                        <img src="" alt="">
+                    <div class="contatodireto">
+                        <img src="img/logostatusdosistema.png" alt="logostatusdosistema">
                         <p>Status de Mensagem</p>
                     </div>
                     <div>
-                        <p>Plataforma Web</p>
+                        <p class="mensagemstatus">Plataforma Web</p>
                     </div>
                     <div>
-                        <p>API de Investimentos</p>
+                        <p class="mensagemstatus">API de Investimentos</p>
                     </div>
                     <div>
-                        <p>Sistema de Pagamentos</p>
+                        <p class="mensagemstatus">Sistema de Pagamentos</p>
                     </div>
-                    <hr class="linhadivisoria">
-                    <p>Última atualização: hoje às 14:30</p>
+                    <hr class="linhastatus">
+                    <p class="atualizaçãostatus">Última atualização: hoje às 14:30</p>
                 </div>
-            </div>
         </div>
             <div>
                 <p>Recursos Úteis</p>
