--- a/Suporte.html
+++ b/Suporte.html
@@ -150,55 +150,23 @@
                         <img src="img/logostatusdosistema.png" alt="logostatusdosistema">
                         <p>Status de Mensagem</p>
                     </div>
-                    <div>
+                    <div class="platdiv">
                         <p class="mensagemstatus">Plataforma Web</p>
+                        <img src="img/logostatusplat.png" alt="Online">
                     </div>
-                    <div>
+                    <div class="platdiv2">
                         <p class="mensagemstatus">API de Investimentos</p>
+                        <img src="img/logostatusplat.png" alt="logoonline">
                     </div>
-                    <div>
+                    <div class="platdiv3">
                         <p class="mensagemstatus">Sistema de Pagamentos</p>
+                        <img src="img/logostatusplat.png" alt="logoonline">
                     </div>
                     <hr class="linhastatus">
                     <p class="atualizaçãostatus">Última atualização: hoje às 14:30</p>
                 </div>
         </div>
-            <div>
-                <p>Recursos Úteis</p>
-                <p>Materiais educativos para te ajudar a investir melhor</p>
-                <div>
-                    <div>
-                        <button>
-                            <img src="" alt="">
-                            <p></p>
-                            <p></p>
-                        </button>
-                    </div>
-                    <div>
-                        <button>
-                            <img src="" alt="">
-                            <p></p>
-                            <p></p>
-                        </button>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <button>
-                            <img src="" alt="">
-                            <p></p>
-                            <p></p>
-                        </button>
-                    </div>
-                    <div>
-                        <button>
-                            <img src="" alt="">
-                            <p></p>
-                            <p></p>
-                        </button>
-                    </div>
-                </div>
-            </div>
+           
         
         </section>
     </main>
