--- a/perfil.html
+++ b/perfil.html
@@ -28,8 +28,7 @@
             <br>
             <div>
                 <button id="btnMostrarSenha" class="botaoperfil">
-                    <img src="img/olho-aberto.png" alt="icone" class="iconeperfil" height="30">
-                    <p class="p1">Mostrar Dados</p>
+                    <img src="img/icone olho.png" alt="icone" class="iconeperfil" height="30">
                 </button>
             </div>
         </div>
@@ -37,7 +36,7 @@
             <div id="edit">
                 <h2>Informações Pessoais</h2>
                 <button id="btnMostrarSenha" class="iconeedit">
-                    <img src="img/logo lapis.png" alt="icone" height="30"> Editar Perfil
+                    <img src="img/logo lapis.png" alt="icone" height="30">
                 </button>
             </div>
             <p>Mantenha seus dados sempre atualizados</p><br>
