--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -41,6 +41,7 @@
         <p>Entre em contato com nosso suporte através do chat ou e-mail</p>
     </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
