--- a/perfil.html
+++ b/perfil.html
@@ -35,7 +35,7 @@
         <div class="caixa_informacoes_perfil">
             <div id="edit">
                 <h2>Informações Pessoais</h2>
-                <button id="btnMostrarSenha" class="iconeedit">
+                <button id="btnMostrarEditar" class="iconeedit">
                     <img src="img/logo lapis.png" alt="icone" height="30">
                 </button>
             </div>
@@ -73,9 +73,7 @@
                 <input type="checkbox">
                 <span class="slider round"></span>
             </label>
-            <button>Alterar Senha</button>
-            <button>Dispositivos Conectados</button>
-            <button>Historico de Login</button>
+
         </div>
         <div class="notificacoes">
             <h1>Notificações</h1>
@@ -83,30 +81,30 @@
             <div class="opcoes-notificacoes">
                 <div class="opcao">
                     <span>E-mail</span>
-                    <label class="switch">
-                        <input type="checkbox" checked>
-                        <span class="slider"></span>
+                    <label class="toggle-switch">
+                        <input type="checkbox" >
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="opcao">
                     <span>SMS</span>
-                    <label class="switch">
+                    <label class="toggle-switch">
                         <input type="checkbox">
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="opcao">
                     <span>Push</span>
-                    <label class="switch">
+                    <label class="toggle-switch">
                         <input type="checkbox" checked>
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="opcao">
                     <span>Relatórios</span>
-                    <label class="switch">
+                    <label class="toggle-switch">
                         <input type="checkbox" checked>
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                     </label>
                 </div>
             </div>
@@ -128,9 +126,9 @@
         <div class="contato">
             <h1>Informações de Contato</h1>
             <div class="contato-info">
-                <p><img src="img/logo correspondencia.png" alt="Email ícone" class="icone-contato"> joao.silva@email.com
+                <p><img src="img/logo correspondencia.png" alt="Email ícone" class="icone-contato"> TechInvestiment@email.com
                 </p>
-                <p><img src="img/logo telefone.png" alt="Telefone ícone" class="icone-contato"> (11) 99999-9999</p>
+                <p><img src="img/logo telefone.png" alt="Telefone ícone" class="icone-contato"> (11) 4002-8922</p>
                 <p><img src="img/logo local.png" alt="Localização ícone" class="icone-contato"> São Paulo, SP</p>
             </div>
         </div>
