--- a/perfil.html
+++ b/perfil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>perfil</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="perfil.css">
 </head>
 
@@ -73,10 +73,6 @@
             <label class="toggle-switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
-            </label>
-            <button>Alterar Senha</button>
-            <button>Dispositivos Conectados</button>
-            <button>Historico de Login</button>
         </div>
         <div class="notificacoes">
             <h1>Notificações</h1>
