--- a/DashBoard.html
+++ b/DashBoard.html
@@ -27,19 +27,28 @@
         </div>
         <div class="conteiners">
             <div class="caixas1">
-                <h2>patrimono total</h2>
-                <p>R$ 20.000</p>
-                <p>+2.1% este mes</p>
+                <div class="c1">
+                    <h2>Patrimono total</h2>
+                    <img src="img/icone dinheirinho.png" alt="icone">
+                </div>
+                <strong><p class="p1">R$ 20.000</p></strong>
+                <p class="p2">+2.1% este mes</p>
             </div>
             <div class="caixas2">
-                <h2>Rentabilidade</h2>
-                <p>+12.5%</p>
-                <p>Ultimos 12 meses</p>
+                <div class="c2">
+                    <h2>Rentabilidade</h2>
+                    <img src="img/icone seta para cima.png" alt="">
+                </div>
+                <strong><p class="p1">+12.5%</p></strong>
+                <p class="p2">Ultimos 12 meses</p>
             </div>
             <div class="caixas3">
-                <h2>Meta mensal</h2>
-                <p>78%</p>
-                <p>------------</p>
+                <div class="c3">
+                    <h2>Meta mensal</h2>
+                    <img src="img/icone meta.png" alt="icone" class="alvodashboard">
+                </div>
+                <strong><p class="p1">78%</p></strong>
+                <img src="img/logolinhadashboard.png" alt="logolinha" class="barraporcentagem">
             </div>
         </div>
 
