--- a/DashBoard.html
+++ b/DashBoard.html
@@ -89,11 +89,9 @@
         </div>
         <div class="ultimo">
             <h2>Ações Rápidas</h2>
-            <div>
-                <button>↗ Novo Investimento</button>
-            </div>
-            <div>
-                <button>$ Retirar Investimento</button>
+            <div class="botaou">
+                <button class="botao1">↗ Novo Investimento</button>
+                <button class="botao2">$ Retirar Investimento</button>
             </div>
         </div>
            
