--- a/perfil.html
+++ b/perfil.html
@@ -28,14 +28,14 @@
             <br>
             <div>
                 <button id="btnMostrarSenha" class="botaoperfil">
-                    <img src="img/icone olho.png" alt="icone" class="iconeperfil" height="30">
+                    <img src="img/icone olho.png" alt="icone" class="icone-olho">
                 </button>
             </div>
         </div>
         <div class="caixa_informacoes_perfil">
             <div id="edit">
                 <h2>Informações Pessoais</h2>
-                <button id="btnMostrarEditar" class="iconeedit">
+                <button id="btnEditarNome" class="iconeedit">
                     <img src="img/logo lapis.png" alt="icone" height="30">
                 </button>
             </div>
