--- a/DashBoard.html
+++ b/DashBoard.html
@@ -109,6 +109,8 @@
                         <button class="botao3" onclick="addCM()">Cripto Moedas</button>
                         <button class="botao3" onclick="addTD()">Tesouro Direto</button>
                         <button class="botao3" onclick="addCDB()">CDB</button>
+                        <label for="pesquise"></label>
+                        <input type="search" name="pesquise" id="pesquise" placeholder="pesquise seu investimento">
                     </div>
                 </div>
                 <button onclick="tira()" class="botao2">$ Retirar Investimento</button>
