--- a/Suporte.html
+++ b/Suporte.html
@@ -133,16 +133,16 @@
                 <div class="divcontatodireto">
                     <p class="mensagemcontatodiv">Não encontrou o que procurava? Envie sua dúvida</p>
                     <p class="nomecontatodireto">Nome</p>
-                    <input type="text" name="" id="">
+                    <input type="text" name="" id="nomeEn">
                     <p>E-mail</p>
-                    <input type="email">
+                    <input type="email" id="emailEn">
                     <p>Assunto</p>
-                    <input type="text">
+                    <input type="text" id="assuntoEn">
                     <p>Prioridade</p>
-                    <input type="">
+                    <input type="text" id="PrioridadeEn">
                     <p>Mensagem</p>
-                    <input type="text" placeholder="Descreva sua duvida ou problema...">
-                    <button>Enviar Mensagem</button>
+                    <input type="text" placeholder="Descreva sua duvida ou problema..." id="mensagemEn">
+                    <button onclick="enviarMen()">Enviar Mensagem</button>
                 </div>
             </div>
                 <div class="statusmensagemdiv">
