--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -29,7 +29,7 @@
                 <p class="texto1"> Esqueci Minha Senha</p>
                 <p class="texto2">Digite seu e-mail para receber instruções de recuperação</p>
                 <p class="texto3">E-mail cadastrado</p>
-                <input id="emailEsqueci" type="email" class="inputemail">
+                <input id="emailEsqueci" type="email"  placeholder="Digite seu e-mail"  class="inputemail">
                 <button onclick="enviarIns()" class="butaoinsano">Enviar instruções</button>
                 <p class="chapou">Lembrou da senha?</p><a href="Login.html" class="ai">Voltar ao login</a>
             </div>
