--- a/Login.html
+++ b/Login.html
@@ -10,10 +10,11 @@
 
 <body>
     <div id="imagi">
-        <img src="img/tech_investment_logo_v1-removebg-preview (1).png" alt="">
+        <img class="img" src="img/logo.png" alt="logo do site" height="100">
+        <h1>TechInvestiment</h1>
     </div>
     <div class="login">
-        <h1>Login</h1>
+        <h2>Login</h2>
         <p>Acesse sua conta para entrar no site.</p>
 
         <form>
