--- a/Cadastro.html
+++ b/Cadastro.html
@@ -10,7 +10,6 @@
 
 <body class="corpo">
     <header class="titulo">
-        <button class="botaovolta">← Voltar</button>
         <div class="toptop">
             <img src="img/logo.png" alt="logo" class="imgtop">
             <h1 class="h1top">TechInvestiment</h1>
@@ -20,10 +19,12 @@
         <div class="caixa_informacoes">
             <h1>Criar Conta</h1>
             <h4>Junte-se a milhares de investidores inteligentes</h4>
+            <div class="texto"> 
+        </div>
+        <div>
             <div class="texto">
                 <label for="nomecompleto">Nome Completo</label>
-                <input id="nomeCadastro" type="text" class="nomecompleto" placeholder="Seu nome completo">
-            </div>
+                <input id="nomeCadastro" type="text" class="nomecompleto" placeholder="Seu nome completo"></div>
             <div class="texto">
                 <label for="gmail">E-mail</label>
                 <input id="emailCadastro" type="email" class="gmail" placeholder="Seu@email.com">
