--- a/Login.html
+++ b/Login.html
@@ -11,18 +11,17 @@
 <body>
     <div id="imagi">
         <img class="img" src="img/logo.png" alt="logo do site" height="100">
-        <h1>TechInvestiment</h1>
+        <h1 class="h1top">TechInvestiment</h1>
     </div>
     <div class="login">
         <h2>Login</h2>
         <p>Acesse sua conta para entrar no site.</p>
 
         <form>
-
             <label for="Email">Email</label>
             <input type="email" id="Email" name="Email" placeholder="Digite seu email" required>
-            <div>
-                <label for="Senha">Senha</label>
+            <label for="Senha">Senha</label>
+            <div>  
                 <div>
                     <input type="password" id="Senha" name="Senha" placeholder="Digite sua senha" required>
                 </div>
