--- a/DashBoard.html
+++ b/DashBoard.html
@@ -13,24 +13,21 @@
 <body>
     <header>
         <div class="head">
-            <button onclick="irLogin()">Voltar</button>
+            
             <img class="header" src="img/logo.png" alt="Logo da empresa">
             <h1>TechInvestiment</h1>
             <button class="BotoesAcesso">DashBoard</button>
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
             <button onclick="irSuporte()" class="BotoesAcesso2">Suporte</button>
+            <button onclick="irLogin()" class="BotoesAcesso2">Voltar</button>
         </div>
     </header>
     <main class="main">
         <div class="pagina">
             <div class="botaot">
                 <h2>DashBoard</h2>
-                <button class="botaoperfil">
-                    <img src="img/icone olho.png" alt="icone" class="iconeperfil">
-                </button>
             </div>
-
             <p>Acompanhe seus investimentos em tempo real</p>
         </div>
         <div class="conteiners">
@@ -40,10 +37,10 @@
                     <img src="img/icone dinheirinho.png" alt="icone">
                 </div>
                 <strong>
-                    <p class="p1">R$ 20.000</p>
+                    <p class="p1" id="p111">R$20.000</p> 
                 </strong>
                 <div class="caixa1m">
-                    <p class="p21">+2.1% este mes</p>
+                    <p class="p21" id="p21">+2.1% este mes</p>
 
                 </div>
 
