--- a/Suporte.html
+++ b/Suporte.html
@@ -21,6 +21,7 @@
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
             <button class="BotoesAcesso3">Suporte</button>
+            <button onclick="irLogin()" class="BotoesAcesso2">Voltar</button>
         </div>
     </header>
     <main class="main">
