--- a/equipe.html
+++ b/equipe.html
@@ -18,6 +18,7 @@
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button class="BotoesAcesso3">Equipe</button>
             <button onclick="irSuporte()" class="BotoesAcesso2">Suporte</button>
+            <button onclick="irLogin()" class="BotoesAcesso2">Voltar</button>
         </div>
     </header>
     <main>
