--- a/perfil.html
+++ b/perfil.html
@@ -17,6 +17,7 @@
             <button class="BotoesAcesso3">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
             <button onclick="irSuporte()" class="BotoesAcesso2">Suporte</button>
+            <button onclick="irLogin()" class="BotoesAcesso2">Voltar</button>
         </div>
     </header>
     <main>
