--- a/perfil.html
+++ b/perfil.html
@@ -27,11 +27,6 @@
                 <p>Gerencie suas informações pessoais e preferências</p>
             </div>
             <br>
-            <div id="acha">
-                <button  id="btnMostrarSenha" class="botaoperfil">
-                    <img src="img/icone olho.png" alt="icone" class="icone-olho">
-                </button>
-            </div>
         </div>
         <div class="caixa_informacoes_perfil">
             <div id="edit">
@@ -39,8 +34,16 @@
                 <button id="btnEditarNome" class="iconeedit">
                     <img src="img/logo lapis.png" alt="icone" height="30">
                 </button>
+                
             </div>
-            <p>Mantenha seus dados sempre atualizados</p><br>
+            <div class="olhodiv">
+                <p>Mantenha seus dados sempre atualizados</p><br>
+                <div id="acha">
+                <button  id="btnMostrarSenha" class="botaoperfil">
+                    <img src="img/icone olho.png" alt="icone" class="icone-olho">
+                </button>
+                </div>
+            </div>
             <div class="linha1">
                 <label for="nomeperfil">Nome Completo</label>
                 <input type="text" id="seuNome" class="nomeperfil">
