finalizado o projeto toma

--- a/DashBoard.html
+++ b/DashBoard.html
@@ -15,7 +15,7 @@
         <div class="head">
             
             <img class="header" src="img/logo.png" alt="Logo da empresa">
-            <h1>TechInvestiment</h1>
+            <h1>TechInvestment</h1>
             <button class="BotoesAcesso">DashBoard</button>
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
