--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -16,7 +16,7 @@
         
         <div class="titulotop">
             <img src="img/logo.png" alt="logo" class="imagemtop">
-            <h1 class="h1top">TechInvestiment</h1> 
+            <h1 class="h1top">TechInvestment</h1> 
 
         </div>
         
