--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
 <body>
     <div id="imagi">
         <img class="img" src="img/logo.png" alt="logo do site" height="100">
-        <h1 class="h1top">TechInvestiment</h1>
+        <h1 class="h1top">TechInvestment</h1>
     </div>
     <div class="login">
         <h2>Login</h2>
