--- a/equipe.html
+++ b/equipe.html
@@ -13,7 +13,7 @@
     <header>
         <div class="head">
             <img class="header" src="img/logo.png" alt="Logo da empresa">
-            <h1>TechInvestiment</h1>
+            <h1>TechInvestment</h1>
             <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button class="BotoesAcesso3">Equipe</button>
