--- a/perfil.html
+++ b/perfil.html
@@ -12,7 +12,7 @@
     <header>
         <div class="head">
             <img class="header" src="img/logo.png" alt="Logo da empresa">
-            <h1>TechInvestiment</h1>
+            <h1>TechInvestment</h1>
             <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
             <button class="BotoesAcesso3">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
@@ -118,7 +118,7 @@
             <h1>Informações de Contato</h1>
             <div class="contato-info">
                 <p><img src="img/logo correspondencia.png" alt="Email ícone" class="icone-contato">
-                    TechInvestiment@email.com
+                    TechInvestment@email.com
                 </p>
                 <p><img src="img/logo telefone.png" alt="Telefone ícone" class="icone-contato"> (11) 4002-8922</p>
                 <p><img src="img/logo local.png" alt="Localização ícone" class="icone-contato"> São Paulo, SP</p>
