--- a/Cadastro.html
+++ b/Cadastro.html
@@ -12,7 +12,7 @@
     <header class="titulo">
         <div class="toptop">
             <img src="img/logo.png" alt="logo" class="imgtop">
-            <h1 class="h1top">TechInvestiment</h1>
+            <h1 class="h1top">TechInvestment</h1>
         </div>
     </header>
     <main>
