--- a/Suporte.html
+++ b/Suporte.html
@@ -16,7 +16,7 @@
         <div class="head">
             
             <img class="header" src="img/logo.png" alt="Logo da empresa">
-            <h1>TechInvestiment</h1>
+            <h1>TechInvestment</h1>
             <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
             <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
             <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
