--- a/Suporte.html
+++ b/Suporte.html
@@ -46,7 +46,7 @@
                 <img src="img/logocarta1.png" alt="icone">
                 <strong><p class="pindividual">E-mail</p></strong>
                 <p class="p1">Resposta em até 24 horas</p>
-                <p class="p2">suporte@techinvestment.com</p>
+                <p class="p2">suporte_techinvestment@gmail.com</p>
                 <button>Enviar E-mail</button>
             </div>
             <div class="chat">
