--- a/DashBoard.html
+++ b/DashBoard.html
@@ -75,18 +75,22 @@
 
             <h3>Resumo da sua carteira</h3>
             <div class="op1">
+                <img src="img/tesouro direto.png" alt="icone">
                 <h2 id="op1">Tesouro Direto</h2>
                 <p id="op1p">R$5.000</p>
             </div>
             <div class="op2">
+                <img src="img/cdb.png" alt="icone">
                 <h2 id="op2">CDB</h2>
                 <p id="op2p">R$2.500</p>
             </div>
             <div class="op3">
+                <img src="img/criptomoedas.png" alt="icone">
                 <h2 id="op3">Cripto Moedas</h2>
                 <p id="op3p">R$1.800</p>
             </div>
             <div class="op4">
+                <img src="img/ações.png" alt="icone">
                 <h2 id="op4">Ações</h2>
                 <p id="op4p">R$3.000</p>
             </div>
